package com.tencent.neat.codec.nrpc;
// 协议包，0x3+length(4字节)+NrpcPacket+0x2
message NRPC {
    optional Head head  = 1; // 包头部分
    optional bytes body = 2; // 包体部分
}


// 包头
message Head {
    optional uint32 version         = 1; //协议版本号
    optional string service_name    = 2; //请求服务名
    optional string service_cmd     = 3; //请求服务内命令字
    optional uint64 seq             = 4; //请求序列号    
    optional string uid             = 5; //用户唯一标示

    optional uint32 client_ip       = 6; //客户端ip
    optional uint32 server_ip       = 7; //服务端ip
    
    optional uint32 appid           = 8; //调用方appid
    optional string referer         = 9; //调用方名称
    
    optional string trace_id        = 10; //调用链的id
    optional string p_span_id       = 11;//调用链父节点spanid

    optional uint32 format          = 12;//包体body编码. 0-pb, 1-json
    repeated Meta meta              = 13;//用于业务扩展的meta

    optional int32 error_code       = 14;//响应错误码,（0~1024系统错误，上报L5失败），业务错误码需大于1024
    optional string error_msg       = 15;//响应错误信息
}

// 类似http的cookie
message Meta {
    optional string key     = 1; //
    optional string value   = 2; //
}